# backend-curavita

./: .gitignore  README.md  manage.py  pyproject.toml
apps/appointments/: apps.py  models.py  permissions.py  reports.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/appointments/migrations/: 0001_initial.py  0002_initial.py  0003_appointment_diagnosis_appointment_is_online_and_more.py
apps/clinics/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/clinics/migrations/: 0001_initial.py  0002_initial.py  0003_alter_clinic_phone.py  0004_clinic_applicant_email_clinic_approved_at_and_more.py
apps/loyalty/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/loyalty/migrations/: 0001_initial.py
apps/notifications/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/payments/: apps.py  models.py
apps/payments/migrations/: 0001_initial.py
apps/reviews/: apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py  0002_review_responded_by_review_response_and_more.py
apps/services/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/services/migrations/: 0001_initial.py  0002_service_slug.py  0003_service_icon.py
apps/users/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
backend_curavita/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
curavita/: apps.py
