[project]
name = "backend-curavita"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "click==8.3.3",
    "daphne>=4.2.1",
    "django==6.0.5",
    "django-allauth==65.16.1",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-phonenumber-field>=8.4.0",
    "django-stubs==6.0.4",
    "django-stubs-ext==6.0.4",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs==3.17.0",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.29.0",
    "geopy>=2.4.1",
    "nh3==0.3.5",
    "packaging==26.2",
    "phonenumbers==9.0.30",
    "pillow>=12.2.0",
    "pip>=26.0.1",
    "psycopg2-binary==2.9.12",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "types-pyyaml==6.0.12.20260510",
    "tzdata==2026.2",
    "wcwidth==0.7.0",
]
